test/negative/237_import_not_found.err
237_import_not_found.fx:4:8: error: module Foo.Bar.Baz is not found
 4 | import Foo.Bar.Baz
   |        ^~~~~~~~~~~
